--- a/css/stile.css
+++ b/css/stile.css
@@ -55,11 +55,12 @@ footer{
 ul{
     font-size: 2rem;
     display: flex;
-    justify-content: space-evenly;
+    justify-content: center;
 }
 
 li{
     margin-top: 1rem;
+    margin-right: 1rem;
     border-radius: 2rem;
     padding: 1rem;
     background-color: darkseagreen;
